8203915: Induction variable of over-unrolled loop conflicts with range checks

Update skeleton predicates before main loop during unrolling to remove dead code.

Reviewed-by: kvn, roland